nav bar visually implemented

--- a/results.html
+++ b/results.html
@@ -2,10 +2,9 @@
 
 <html lang="en-US">
     <head>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet"  href="results.css">
         <link rel="stylesheet" href="nav.css">
-        <title>GMDB Home</title>
-
+        <title>GMDB Search Results</title>
     </head>
 
     <body>
@@ -23,7 +22,12 @@
             <button type="submit" id="search">Search</button>
         </div>
 
-        <!-- login div -->
+        <!-- back to results -->
+        <div>
+
+        </div>
+
+        <!-- movies -->
         <div>
 
         </div>
