--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     </head>
 
-    <body>
+    <body class="body">
         <!-- nav div -->
         <div class="nav">
             <h2 id="gmdb">GMDB</h2>
@@ -24,8 +24,17 @@
         </div>
 
         <!-- login div -->
-        <div>
+        <div class="main">
+            <h2 id="login-text">Login</h2>
+            <div id="email">
 
+            </div>
+            <div id="password">
+
+            </div>
+            <div id="login-button">
+
+            </div>
         </div>
     </body>
 </html>
