minor refactoring of .css files

--- a/results.html
+++ b/results.html
@@ -2,12 +2,12 @@
 
 <html lang="en-US">
     <head>
-        <link rel="stylesheet"  href="results.css">
+        <link rel="stylesheet"  href="style.css">
         <link rel="stylesheet" href="nav.css">
         <title>GMDB Search Results</title>
     </head>
 
-    <body>
+    <body class="body">
         <!-- nav div -->
         <div class="nav">
             <h2 id="gmdb">GMDB</h2>
