--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en-US">
     <head>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
         <title>GMDB Home</title>
 
